# R4C_api

./: .env.template  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/R4C/: settings.py  urls.py
src/common/: converters.py  errors.py  send_email.py  utils.py
src/customers/migrations/: 0002_alter_customer_id.py
src/data/: robot_summary.xlsx
src/orders/: models.py  urls.py  views.py
src/orders/business_logic/: dto.py  errors.py  orders.py
src/orders/migrations/: 0002_alter_order_id.py  0003_rename_robot_serial_order_serial_order_created_at_and_more.py
src/robots/: apps.py  models.py  urls.py  views.py
src/robots/business_logic/dto/: __init__.py  robot.py
src/robots/business_logic/services/: __init__.py  errors.py  robot.py
src/robots/data/: robot_summary.xlsx
src/robots/migrations/: 0002_robotmodel_remove_robot_model_alter_robot_id_and_more.py  0003_robot_is_active.py
src/robots/signals/: inform_users_about_robot_is_ready.py
